Add saveNewTodo and create form to show saved todos

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Vue</title>
+  <title>Todo List</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
   <script src="./js/bundle.js"></script>
 </head>
 <body>
   <div id="app">
+    <form v-on:submit.prevent="saveNewTodo">
+        <label for="new-todo"></label>
+        <input id="new-todo" type="text"/>
+
+        <input type="radio" id="high" name="priority" value="High">
+        <label for="high">High</label>
+
+        <input type="radio" id="low" name="priority" value="Low">
+        <label for="low">Low</label>
+
+        <input type="submit" value="Save Item"/>
+    </form>
+    <ul>
+        <li v-for="todo in todos">
+            <span>{{todo}}</span>
+        </li>
+    </ul>
   </div>
 </body>
 </html>
