Change app color

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
         <input id="new-todo" type="text" v-model="newTodo"/>
 
         <input class="radio" type="radio" id="high" name="priority" value="High" v-model="priority">
-        <label for="high">High</label>
+        <label class="radio-high" for="high">High</label>
 
         <input class="radio" type="radio" id="low" name="priority" value="Low" v-model="priority">
-        <label for="low">Low</label>
+        <label class="radio-low" for="low">Low</label>
 
         <input class="button" type="submit" value="Save Item"/>
     </form>
